# enum_builder

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: test_enum_builder.rs
tests/more_animals/: chicken.rs  goat.rs  mod.rs
